Integer.valueOf instead of deprecated new Integer(...) (#8831)