@@ -18,7 +18,7 @@ public class User implements PathBindable<User> {
 public User bind(String key, String id) {
 
 	// findById meant to be lightweight operation
-	User user = findById(new Long(id));
+	User user = findById(Long.valueOf(id));
 	if (user == null) {
 		throw new IllegalArgumentException("User with id " + id + " not found");
 	}
